Linux tweaks for Git Config

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,7 @@
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [include]
 	path = .gitconfig.user
-[credential]
-	helper = osxkeychain
+	path = .gitconfig.os
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
