Steal Davis's poh alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
 	st = status
 	co = checkout
+	poh = push origin head
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [include]
 	path = .gitconfig.user
