--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
 	st = status
 	co = checkout
+	po = push origin
 	poh = push origin head
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [include]
@@ -14,6 +15,6 @@
 [pull]
 	rebase = false
 
-[commit]
-	gpgsign = true
+# [commit]
+#	gpgsign = true
 
