--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	st = status
 	co = checkout
 	po = push origin
-	poh = push origin head
+	poh = push origin HEAD
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [include]
 	path = .gitconfig.user
