--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,7 @@
 	po = push origin
 	poh = push origin HEAD
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	unfuck = reset --hard HEAD
 [include]
 	path = .gitconfig.user
 	path = .gitconfig.os
