--- a/.gitconfig
+++ b/.gitconfig
@@ -7,8 +7,14 @@
 	fucked = !git add . && git commit -m "$1" && git push origin head
 	unfuck = reset --hard HEAD
 [include]
-	path = .gitconfig.user
-	path = .gitconfig.os
+	path = ~/.gitconfig.os
+
+[includeIf "gitdir:~/workspace/"]
+    path = ~/.gitconfig.user
+
+[includeIf "gitdir:~/workspace/personal/"]
+    path = ~/.gitconfig.user.github
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
@@ -16,7 +22,3 @@
 	required = true
 [pull]
 	rebase = false
-
-# [commit]
-#	gpgsign = true
-
